src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__function_call_var_bad_too_few.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
fn a(a, b, c) { "err" }
let a = a
a(0, 1)

ERROR
invalid number of arguments
3 |  a(0, 1)
  |  ^^^^^^^


DISASM:

.fn @main
  params 0
  stack 5
  .locals
    a = r1
  .code
  0  lfunc r1, fn1   ; fn1=a
  1  lsmi r3, 0
  2  lsmi r4, 1
  3  call r2, r1, 2   ; dyn
  4  retv r2

.fn a
  params 3
  stack 4
  .locals
    a = r1
    b = r2
    c = r3
  .code
  0  lstr r0, "err"
  1  ret
