src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__function_call_var_bad_too_many.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
fn a() { "err" }
let a = a
a(0)

ERROR
invalid number of arguments
3 |  a(0)
  |   ^^^


DISASM:

.fn @main
  params 0
  stack 4
  .locals
    a = r1
  .code
  0  lfunc r1, fn1   ; fn1=a
  1  lsmi r3, 0
  2  call r2, r1, 1   ; dyn
  3  retv r2

.fn a
  params 0
  stack 1
  .code
  0  lstr r0, "err"
  1  ret
