src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__if_eq_specialized_bool_false.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let v = false

if v == false { "ok" } else { "err" }
}

OK
"ok"
