src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__if_eq_specialized_int.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let v = 1

if v == 1 { "ok" } else { "err" }
}

OK
"ok"
