src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__if_eq_specialized_not_bool_false.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = false

if v != false { "err" } else { "ok" }

OK
"ok"
