src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__if_eq_specialized_not_bool_true.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = true

if v != true { "err" } else { "ok" }

OK
"ok"
