src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__if_eq_specialized_not_float.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = 1.0

if v != 1.0 { "err" } else { "ok" }

OK
"ok"
