src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__if_eq_specialized_not_int.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
let v = 1

if v != 1 { "err" } else { "ok" }

OK
"ok"
