src/vm/snapshots/hebi4__vm__tests__tests__inputs__run__if_eq_specialized_not_nil.snap
---
source: src/vm/tests.rs
expression: snapshot
---
SOURCE
do {
let v = nil

if v != nil { "err" } else { "ok" }
}

OK
"ok"
